Adding initial contact and portfolio files

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <div class="content-wrapper">
 
     <div class="content-container">
-        <div class="about-container"></div>
-        <div class="divider"></div>
+        <div class="content-title"></div>
+        <div class="content-divider"></div>
         <div class="bio-info"></div>
     </div>
 
