--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,34 @@
     <div class="content-container">
         <div class="content-title"></div>
         <div class="content-divider"></div>
+        <div class="portfolio-items-wrapper">
+            
+            <div class="portfolio-item">
+                <div class="portfolio-item-image"></div>
+                <div class="portfolio-item-title"></div>
+            </div>
+            <div class="portfolio-item">
+                    <div class="portfolio-item-image"></div>
+                    <div class="portfolio-item-title"></div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-item-image"></div>
+                <div class="portfolio-item-title"></div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-item-image"></div>
+                <div class="portfolio-item-title"></div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-item-image"></div>
+                <div class="portfolio-item-title"></div>
+            </div>
+            <div class="portfolio-item">
+                    <div class="portfolio-item-image"></div>
+                    <div class="portfolio-item-title"></div>
+            </div>
+
+        </div>
         <!-- need to insert the portfolio stuff here -->
     </div>
 
