Added placeholder content to index file

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 <!--Menu Wrapper -->
 <div class="menu-wrapper">
     <div class="menu-content-wrapper">
-        <div class="portfolio-name"></div>
+        <div class="portfolio-name">
+            <h1>Christie Hennes</h1>
+
+        </div>
         <div class="menu-items-container">
             <div class="menu-items-wrapper">
-                <div class="menu-item"></div>
-                <div class="menu-item"></div>
-                <div class="menu-item"></div>
+                <div class="menu-item">About</div>
+                <div class="menu-item">Portfolio</div>
+                <div class="menu-item">Contact</div>
             </div>
         </div>
     </div>
@@ -29,9 +32,21 @@
 <div class="content-wrapper">
 
     <div class="content-container">
-        <div class="content-title"></div>
-        <div class="content-divider"></div>
-        <div class="bio-info"></div>
+
+        <div class="content-title">
+            <h1>About Me</h1>
+        </div>
+
+        <div class="content-divider">
+            <hr>
+        </div>
+
+        <div class="bio-info">
+            <!--TODO: Insert image here -->
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
+        </div>
     </div>
 
 </div>
@@ -40,7 +55,7 @@
 <div class="footer-wrapper">
     <div class="footer-top"></div>
     <div class="footer-bottom">
-        <div class ="footer-content"></div>
+        <div class ="footer-content">Copyright</div>
     </div>
 
 </div>
