--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,11 @@
 
     <div class="content-container">
         <div class="content-title"></div>
-        <div class="content-divider"></div>
+        <div class="content-divider">
+            <hr>
+        </div>
         <div class="portfolio-items-wrapper">
-            
+
             <div class="portfolio-item">
                 <div class="portfolio-item-image"></div>
                 <div class="portfolio-item-title"></div>
