--- a/portfolio.html
+++ b/portfolio.html
@@ -13,51 +13,66 @@
 <!--Menu Wrapper -->
 <div class="menu-wrapper">
     <div class="menu-content-wrapper">
-        <div class="portfolio-name"></div>
+        <div class="portfolio-name">
+            <h1>Christie Hennes</h1>
+        </div>
         <div class="menu-items-container">
             <div class="menu-items-wrapper">
-                <div class="menu-item"></div>
-                <div class="menu-item"></div>
-                <div class="menu-item"></div>
+                <div class="menu-item">About</div>
+                <div class="menu-item">Portfolio</div>
+                <div class="menu-item">Contact</div>
             </div>
         </div>
     </div>
-
 </div>
 
 <!--Content Wrapper -->
 <div class="content-wrapper">
 
     <div class="content-container">
-        <div class="content-title"></div>
+        <div class="content-title">
+            <h1>Portfolio</h1>
+        </div>
         <div class="content-divider">
             <hr>
         </div>
         <div class="portfolio-items-wrapper">
 
             <div class="portfolio-item">
-                <div class="portfolio-item-image"></div>
-                <div class="portfolio-item-title"></div>
+                <div class="portfolio-item-image">
+                    <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                </div>
+                <div class="portfolio-item-title">Item1</div>
             </div>
             <div class="portfolio-item">
-                    <div class="portfolio-item-image"></div>
-                    <div class="portfolio-item-title"></div>
+                    <div class="portfolio-item-image">
+                        <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                    </div>
+                    <div class="portfolio-item-title">Item2</div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-item-image"></div>
-                <div class="portfolio-item-title"></div>
+                <div class="portfolio-item-image">
+                    <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                </div>
+                <div class="portfolio-item-title">Item3</div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-item-image"></div>
-                <div class="portfolio-item-title"></div>
+                <div class="portfolio-item-image">
+                    <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                </div>
+                <div class="portfolio-item-title">Item4</div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-item-image"></div>
-                <div class="portfolio-item-title"></div>
+                <div class="portfolio-item-image">
+                    <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                </div>
+                <div class="portfolio-item-title">Item5</div>
             </div>
             <div class="portfolio-item">
-                    <div class="portfolio-item-image"></div>
-                    <div class="portfolio-item-title"></div>
+                    <div class="portfolio-item-image">
+                        <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                    </div>
+                    <div class="portfolio-item-title">Item6</div>
             </div>
 
         </div>
@@ -70,7 +85,7 @@
 <div class="footer-wrapper">
     <div class="footer-top"></div>
     <div class="footer-bottom">
-        <div class ="footer-content"></div>
+        <div class ="footer-content">Copyright</div>
     </div>
 
 </div>
