Initial css for menu and updated html across all pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <div class="menu-wrapper">
     <div class="menu-content-wrapper">
         <div class="portfolio-name">
-            <h1>Christie Hennes</h1>
+            <h1 class="menu-header-text">Christie Hennes</h1>
         </div>
         <div class="menu-items-container">
             <div class="menu-items-wrapper">
