--- a/portfolio.html
+++ b/portfolio.html
@@ -11,17 +11,17 @@
 <body>
 
 <!--Menu Wrapper -->
+<!--Menu Wrapper -->
 <div class="menu-wrapper">
     <div class="menu-content-wrapper">
-        <div class="portfolio-name">
-            <h1 class="menu-header-text">Christie Hennes</h1>
+        <div class="portfolio-name-wrapper">
+            <h2 class="menu-header-text">Christie Hennes</h2>
         </div>
-        <div class="menu-items-container">
-            <div class="menu-items-wrapper">
-                <div class="menu-item">About</div>
-                <div class="menu-item">Portfolio</div>
-                <div class="menu-item">Contact</div>
-            </div>
+        <div class="menu-blank-container"></div>
+        <div class="menu-items-wrapper">
+            <div class="menu-item">About</div>
+            <div class="menu-item">Portfolio</div>
+            <div class="menu-item">Contact</div>
         </div>
     </div>
 </div>
