Centered content on page for all files

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
     <script src="main.js"></script>
 </head>
-<body>
+<body class="body">
 
 <!--Menu Wrapper -->
 <div class="menu-wrapper">
-    <div class="menu-content-wrapper">
+    <div class="menu-content-wrapper centered-content">
         <div class="portfolio-name-wrapper">
             <h2 class="menu-header-text">Christie Hennes</h2>
         </div>
@@ -28,7 +28,7 @@
 <!--Content Wrapper -->
 <div class="content-wrapper">
 
-    <div class="content-container">
+    <div class="content-container centered-content">
         <div class="content-title">
             <h1>Portfolio</h1>
         </div>
@@ -82,14 +82,17 @@
 
 <!--Footer Wrapper -->
 <div class="footer-wrapper">
-    <div class="footer-top"></div>
-    <div class="footer-bottom">
-        <div class ="footer-content">Copyright</div>
+    <div class ="footer-content  centered-content">
+        <div class="footer-top"></div>
+        <div class="footer-bottom">
+            <div class ="footer-content">Copyright</div>
+        </div>
     </div>
 
 </div>
 
 
-    
+
+
 </body>
 </html>
