--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
         </div>
         <div class="menu-blank-container"></div>
         <div class="menu-items-wrapper">
-            <div class="menu-item">About</div>
-            <div class="menu-item">Portfolio</div>
-            <div class="menu-item">Contact</div>
+            <div class="menu-item"><a href="./index.html">About</a></div>
+            <div class="menu-item"><a href="./portfolio.html">Portfolio</a></div>
+            <div class="menu-item"><a href="./contact.html">Contact</a></div>
         </div>
     </div>
 </div>
