Updated footer structure and formatting

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,13 +82,12 @@
 
 <!--Footer Wrapper -->
 <div class="footer-wrapper">
-    <div class ="footer-content  centered-content">
-        <div class="footer-top"></div>
-        <div class="footer-bottom">
-            <div class ="footer-content">Copyright</div>
+    <div class="footer-top"></div>
+    <div class="footer-bottom">
+        <div class="footer-content centered-content">
+            <div class="footer-content-text">Copyright</div>
         </div>
     </div>
-
 </div>
 
 
