--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="menu-blank-container"></div>
         <div class="menu-items-wrapper">
-            <div class="menu-item"><a href="./index.html">About</a></div>
+            <div class="menu-item"><a href="./index.html">About</a></div> 
             <div class="menu-item"><a href="./portfolio.html">Portfolio</a></div>
             <div class="menu-item"><a href="./contact.html">Contact</a></div>
         </div>
@@ -45,14 +45,14 @@
 
 <!--Footer Wrapper -->
 <div class="footer-wrapper">
-    <div class ="footer-content  centered-content">
-        <div class="footer-top"></div>
-        <div class="footer-bottom">
-            <div class ="footer-content">Copyright</div>
+    <div class="footer-top"></div>
+    <div class="footer-bottom">
+        <div class="footer-content centered-content">
+            <div class="footer-content-text">Copyright</div>
         </div>
     </div>
-
 </div>
+
 
 
     
