--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
     <div class="footer-top"></div>
     <div class="footer-bottom">
         <div class="footer-content centered-content">
-            <div class="footer-content-text">Copyright</div>
+            <div class="footer-content-text">Copyright &copy;</div>
         </div>
     </div>
 </div>
