Updated padding on content

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,53 +29,54 @@
 <div class="content-wrapper">
 
     <div class="content-container centered-content">
-        <div class="content-title">
-            <h1>Portfolio</h1>
-        </div>
-        <div class="content-divider">
-            <hr>
-        </div>
-        <div class="portfolio-items-wrapper">
-
-            <div class="portfolio-item">
-                <div class="portfolio-item-image">
-                    <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
-                </div>
-                <div class="portfolio-item-title">Item1</div>
+        <div class="content-padding">
+            <div class="content-title">
+                <h1>Portfolio</h1>
             </div>
-            <div class="portfolio-item">
+            <div class="content-divider">
+                <hr>
+            </div>
+            <div class="portfolio-items-wrapper">
+
+                <div class="portfolio-item">
                     <div class="portfolio-item-image">
                         <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
                     </div>
-                    <div class="portfolio-item-title">Item2</div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-item-image">
-                    <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                    <div class="portfolio-item-title">Item1</div>
                 </div>
-                <div class="portfolio-item-title">Item3</div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-item-image">
-                    <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                <div class="portfolio-item">
+                        <div class="portfolio-item-image">
+                            <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                        </div>
+                        <div class="portfolio-item-title">Item2</div>
                 </div>
-                <div class="portfolio-item-title">Item4</div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-item-image">
-                    <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
-                </div>
-                <div class="portfolio-item-title">Item5</div>
-            </div>
-            <div class="portfolio-item">
+                <div class="portfolio-item">
                     <div class="portfolio-item-image">
                         <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
                     </div>
-                    <div class="portfolio-item-title">Item6</div>
-            </div>
+                    <div class="portfolio-item-title">Item3</div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="portfolio-item-image">
+                        <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                    </div>
+                    <div class="portfolio-item-title">Item4</div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="portfolio-item-image">
+                        <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                    </div>
+                    <div class="portfolio-item-title">Item5</div>
+                </div>
+                <div class="portfolio-item">
+                        <div class="portfolio-item-image">
+                            <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                        </div>
+                        <div class="portfolio-item-title">Item6</div>
+                </div>
 
+            </div>
         </div>
-        <!-- need to insert the portfolio stuff here -->
     </div>
 
 </div>
