--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
 <!--Content Wrapper -->
 <div class="content-wrapper">
     <div class="content-container  centered-content">
-        <div class="content-title">
-            <h1>About Me</h1>
-        </div>
-        <div class="content-divider">
-            <hr>
-        </div>
-        <div class="bio-info">
-            <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
+        <div class="content-padding">
+            <div class="content-title">
+                <h1>About Me</h1>
+            </div>
+            <div class="content-divider">
+                <hr>
+            </div>
+            <div class="bio-info">
+                <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
+            </div>
         </div>
     </div>
 </div>
