--- a/portfolio.html
+++ b/portfolio.html
@@ -36,43 +36,60 @@
             <div class="content-divider">
                 <hr>
             </div>
-            <div class="portfolio-items-wrapper">
+            <div class="portfolio-items-container">
 
-                <div class="portfolio-item">
-                    <div class="portfolio-item-image">
-                        <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-item-image-container">
+                        <img class="portfolio-item-image" src="./assets/images/stock.jpg">
                     </div>
-                    <div class="portfolio-item-title">Item1</div>
-                </div>
-                <div class="portfolio-item">
-                        <div class="portfolio-item-image">
-                            <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
-                        </div>
-                        <div class="portfolio-item-title">Item2</div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="portfolio-item-image">
-                        <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                    <div class="portfolio-item-title-wrapper">
+                        <div class="portfolio-text">Item6</div>
                     </div>
-                    <div class="portfolio-item-title">Item3</div>
                 </div>
-                <div class="portfolio-item">
-                    <div class="portfolio-item-image">
-                        <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-item-image-container">
+                        <img class="portfolio-item-image" src="./assets/images/stock.jpg">
                     </div>
-                    <div class="portfolio-item-title">Item4</div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="portfolio-item-image">
-                        <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
+                    <div class="portfolio-item-title-wrapper">
+                        <div class="portfolio-text">Item6</div>
                     </div>
-                    <div class="portfolio-item-title">Item5</div>
                 </div>
-                <div class="portfolio-item">
-                        <div class="portfolio-item-image">
-                            <img src="http://lorempixel.com/output/nature-q-c-200-150-5.jpg">
-                        </div>
-                        <div class="portfolio-item-title">Item6</div>
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-item-image-container">
+                        <img class="portfolio-item-image" src="./assets/images/stock.jpg">
+                    </div>
+                    <div class="portfolio-item-title-wrapper">
+                        <div class="portfolio-text">Item6</div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-item-image-container">
+                        <img class="portfolio-item-image" src="./assets/images/stock.jpg">
+                    </div>
+                    <div class="portfolio-item-title-wrapper">
+                        <div class="portfolio-text">Item6</div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-item-image-container">
+                        <img class="portfolio-item-image" src="./assets/images/stock.jpg">
+                    </div>
+                    <div class="portfolio-item-title-wrapper">
+                        <div class="portfolio-text">Item6</div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-item-image-container">
+                        <img class="portfolio-item-image" src="./assets/images/stock.jpg">
+                    </div>
+                    <div class="portfolio-item-title-wrapper">
+                        <div class="portfolio-text">Item6</div>
+                    </div>
                 </div>
 
             </div>
