Cleaning up css file

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
             <div class="bio-info">
                 <div class="p-container">
                     <img class="first-p" src="./assets/images/christie.jpg" height="150px">
-                    <p class="first-p padded">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
+                    <p class="first-p padded">Hello! Welcome to my portfolio. <br><br>
+                    I'm a San Diego native with a passion for technology and grew up traveling and exploring the mountains of Southern California. From a young age, I was always interested in business, entrepreneurship, and problem solving. I graduated from the University of Southern California with a degree in Business and Computer Science.</p>
                 </div>
-                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
-                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit arcu quis mi cursus ornare. Nulla sed nibh et elit commodo porttitor. Curabitur euismod dui nunc, sit amet tincidunt tortor malesuada mattis. Cras finibus mauris nec purus fringilla, sit amet dictum sapien elementum. Morbi aliquam blandit neque, eget vulputate nibh dignissim scelerisque. Vestibulum volutpat id ipsum vitae tempor. Donec et turpis id nunc rhoncus viverra. Nam cursus vestibulum consectetur. Sed aliquet est et facilisis consequat. Sed sit amet metus ipsum. Mauris mollis, ligula et tempor elementum, lorem massa mattis ligula, quis bibendum eros dui vel sem. Fusce ligula orci, blandit in augue in, fermentum mollis felis.</p>
+                <p class="paragraph">Some of my passions include building impactful products, helping others achieve their goals, and using technology to solve non-technical problems. I currenly head up product at a local event ticketing software company, TicketSauce. I am responsible for directing and building our product roadmap, gathering and defining requirements, and overseeing the end-to-end delivery of all features.  </p>
+                <p class="paragraph">My goal is to design and devlop digital products to improve the quality of everyday life while solving challenging and meaningful problems. Take a peek into my portfolio to see what I've been up to!</p>
             </div>
         </div>
     </div>
@@ -53,7 +54,7 @@
     <div class="footer-top"></div>
     <div class="footer-bottom">
         <div class="footer-content centered-content">
-            <div class="footer-content-text">Copyright &copy;</div>
+            <div class="footer-content-text">Copyright&copy;</div>
         </div>
     </div>
 </div>
