--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="portfolio-item-title-wrapper">
-                        <div class="portfolio-text">Item6</div>
+                        <div class="portfolio-text">Project 1</div>
                     </div>
 
                 </div>
@@ -54,7 +54,7 @@
                         <img class="portfolio-item-image" src="./assets/images/stock.jpg">
                     </div>
                     <div class="portfolio-item-title-wrapper">
-                        <div class="portfolio-text">Item6</div>
+                        <div class="portfolio-text">Project 2</div>
                     </div>
                 </div>
 
@@ -63,7 +63,7 @@
                         <img class="portfolio-item-image" src="./assets/images/stock.jpg">
                     </div>
                     <div class="portfolio-item-title-wrapper">
-                        <div class="portfolio-text">Item6</div>
+                        <div class="portfolio-text">Project 3</div>
                     </div>
                 </div>
 
@@ -72,7 +72,7 @@
                         <img class="portfolio-item-image" src="./assets/images/stock.jpg">
                     </div>
                     <div class="portfolio-item-title-wrapper">
-                        <div class="portfolio-text">Item6</div>
+                        <div class="portfolio-text">Project 4</div>
                     </div>
                 </div>
 
@@ -81,7 +81,7 @@
                         <img class="portfolio-item-image" src="./assets/images/stock.jpg">
                     </div>
                     <div class="portfolio-item-title-wrapper">
-                        <div class="portfolio-text">Item6</div>
+                        <div class="portfolio-text">Project 5</div>
                     </div>
                 </div>
 
@@ -90,7 +90,7 @@
                         <img class="portfolio-item-image" src="./assets/images/stock.jpg">
                     </div>
                     <div class="portfolio-item-title-wrapper">
-                        <div class="portfolio-text">Item6</div>
+                        <div class="portfolio-text">Project 6</div>
                     </div>
                 </div>
 
@@ -105,7 +105,7 @@
     <div class="footer-top"></div>
     <div class="footer-bottom">
         <div class="footer-content centered-content">
-            <div class="footer-content-text">Copyright &copy;</div>
+            <div class="footer-content-text">Copyright&copy;</div>
         </div>
     </div>
 </div>
