Updated pre-filled contact fields

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                 <div class="field-name">Name</div>
                 <input class="field" type="text" name="Name" value="John Smith" size="100%">
                 <div class="field-name">Email</div>
-                <input class="field" type="email" name="Email">
+                <input class="field" type="email" name="Email" value="example@gmail.com">
                 <div class="field-name">Message</div>
                 <textarea class="field" name="Message" rows="5"></textarea>
                 <br>
